// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`response-indicators snapshot  - no feedback  1`] = `
<div>
  <span
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "display": "inline-block",
          "height": "30px",
          "position": "relative",
          "width": "30px",
        }
      }
    >
      <svg
        preserveAspectRatio="xMinYMin meet"
        style={
          Object {
            "enableBackground": "new 0 0 44 40",
          }
        }
        version="1.1"
        viewBox="0 0 44 40"
        x="0px"
        y="0px"
      >
         
        <circle
          className="IconBase-bg-5"
          cx="23"
          cy="20.4"
          r="16"
          transform="translate(-3, 0)"
        />
        <polygon
          className="IconBase-fg-6"
          points="19.1,28.6 11.8,22.3 14.4,19.2 17.9,22.1 23.9,11.4 27.5,13.4"
          transform="translate(0, 0)"
        />
      </svg>
    </div>
  </span>
</div>
`;

exports[`response-indicators snapshot  - with feedback  1`] = `
<div
  className="RawIndicator-responseIndicator-1"
>
  <span
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "display": "inline-block",
          "height": "30px",
          "position": "relative",
          "width": "30px",
        }
      }
    >
      <svg
        preserveAspectRatio="xMinYMin meet"
        style={
          Object {
            "enableBackground": "new 0 0 44 40",
          }
        }
        version="1.1"
        viewBox="0 0 44 40"
        x="0px"
        y="0px"
      >
         
        <circle
          className="IconBase-bg-5"
          cx="23"
          cy="20.4"
          r="16"
          transform="translate(-3, 0)"
        />
        <polygon
          className="IconBase-fg-6"
          points="19.1,28.6 11.8,22.3 14.4,19.2 17.9,22.1 23.9,11.4 27.5,13.4"
          transform="translate(0, 0)"
        />
      </svg>
    </div>
  </span>
</div>
`;
